--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
     .adj-dropdown.active { display: block; }
     .adj-dropdown.open-up { bottom: 100%; top: auto; margin-bottom: 5px; }
 
+    /* Controls */
     .controls { display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px; gap: 15px; }
     .btn-action { background: white; border: 1px solid #ddd; padding: 8px 16px; cursor: pointer; font-size: 12px; font-weight: 600; border-radius: 4px; transition: 0.2s; }
     .btn-action.active { background: var(--ps-green) !important; color: white !important; border-color: var(--ps-green) !important; }
@@ -77,7 +78,6 @@
     .im-list-table { width: 100%; background: white; border-radius: 8px; border-collapse: collapse; }
     .im-list-table th { background: var(--ps-dark-gray); color: white; padding: 10px; font-size: 11px; }
     .im-list-table td { padding: 10px; border-bottom: 1px solid #eee; }
-    .im-list-table tr.overload { background-color: var(--ps-overload-bg); }
     .status-dot { height: 10px; width: 10px; border-radius: 50%; display: inline-block; margin-right: 5px; }
 
     .capacity-container { margin: 25px 0 15px 0; position: relative; }
@@ -133,7 +133,7 @@
   <div id="view-territory" class="view">
     <div class="controls"><h2 style="color:var(--ps-dark-green); margin:0;">Territory Load Overview (EST)</h2>
       <div class="control-group">
-        <button id="sort-tier-territory" class="btn-action" onclick="toggleTierSort()">Sort Tier ↑↓</button>
+        <button id="btn-sort-territory" class="btn-action" onclick="toggleTierSort()">Sort Tier ↑↓</button>
         <button id="btn-grid-territory" class="btn-action" onclick="setLayout('grid')">Card View</button>
         <button id="btn-list-territory" class="btn-action active" onclick="setLayout('list')">List View</button>
       </div>
@@ -145,7 +145,7 @@
     <div class="tabs" style="font-size:12px; margin-bottom:15px; border-bottom:1px solid #eee;">
       <div id="sub-team-roster" class="tab active" onclick="switchSubTab('roster')">Full Team Roster</div>
       <div id="sub-team-strat" class="tab" onclick="switchSubTab('strat')">
-        Assignment Review
+        Deal Assignment Review
         <div class="notification-badge" id="sub-badge">2</div>
       </div>
     </div>
@@ -159,7 +159,7 @@
           <button id="filter-cst" class="btn-action" onclick="setTZFilter('CST')">CST</button>
           <button id="filter-pst" class="btn-action" onclick="setTZFilter('PST')">PST</button>
           <span style="border-left:1px solid #ccc; margin:0 5px;"></span>
-          <button id="sort-tier-team" class="btn-action" onclick="toggleTierSort()">Sort Tier ↑↓</button>
+          <button id="btn-sort-team" class="btn-action" onclick="toggleTierSort()">Sort Tier ↑↓</button>
           <button id="btn-grid-team" class="btn-action" onclick="setLayout('grid')">Card View</button>
           <button id="btn-list-team" class="btn-action active" onclick="setLayout('list')">List View</button>
         </div>
@@ -187,7 +187,7 @@ const ADJ_OPTIONS = ["Extended Launch", "Proof of Concept", "Pilots", "DSAs/DUAs
 let currentTab = 'my-book';
 let currentLayout = 'list';
 let currentTZFilter = 'all';
-let tierSortDir = 'desc';
+let tierSortDir = 'desc'; // Track sort state
 
 let myDeals = Array.from({length: 12}, (_, i) => {
     const savedAdj = localStorage.getItem(`adj_my_deal_${i}`);
@@ -235,7 +235,7 @@ function updateMetrics() {
     deals = 12; maxPts = 120; document.getElementById('tier-context').innerText = "(T3)";
   } else {
     roster.forEach(im => { deals += im.dealsCount; points += im.currentPoints; yellow += im.yellowRisk; red += im.redRisk; maxPts += MPC_VALUES[im.tier]; });
-    document.getElementById('tier-context').innerText = currentTab === 'territory' ? "(EST Avg)" : "(Team Avg)";
+    document.getElementById('tier-context').innerText = "(EST Avg)";
   }
   const capPct = Math.round((points / maxPts) * 100);
   const color = capPct >= 90 ? 'var(--ps-red)' : (capPct >= 75 ? 'var(--ps-gold)' : 'var(--ps-green)');
@@ -251,14 +251,17 @@ function toggleTierSort() {
   renderTeamContent();
 }
 
+function setLayout(m) { 
+  currentLayout = m; 
+  renderTeamContent();
+}
+
 function setTZFilter(tz) {
   currentTZFilter = tz;
   document.querySelectorAll('[id^="filter-"]').forEach(b => b.classList.remove('active'));
   document.getElementById('filter-' + tz.toLowerCase()).classList.add('active');
   renderTeamContent();
 }
-
-function setLayout(m) { currentLayout = m; renderTeamContent(); }
 
 function calculateTotalPoints(deal) { return (SIZE_PTS[deal.size] || 0) + (SIS_PTS[deal.sis] || 0) + (HEALTH_PTS[deal.health] || 0) + deal.adj.length; }
 
@@ -304,7 +307,13 @@ function renderTeamContent() {
   const btnId = `btn-${currentLayout}-${currentTab.includes('team') ? 'team' : 'territory'}`;
   if(document.getElementById(btnId)) document.getElementById(btnId).classList.add('active');
 
-  const sorted = roster.sort((a, b) => tierSortDir === 'desc' ? b.tier.localeCompare(a.tier) : a.tier.localeCompare(b.tier));
+  // Logic: Tier Sort Ascending/Descending
+  const sorted = roster.sort((a, b) => {
+      const tierA = parseInt(a.tier.replace('T', ''));
+      const tierB = parseInt(b.tier.replace('T', ''));
+      if (tierSortDir === 'desc') return tierB - tierA || a.name.localeCompare(b.name);
+      return tierA - tierB || a.name.localeCompare(b.name);
+  });
 
   if (currentLayout === 'list') {
     const table = document.createElement('table'); table.className = 'im-list-table';
@@ -348,7 +357,7 @@ function renderReviewQueue() {
   const container = document.getElementById('review-container');
   container.innerHTML = reviewQueue.map(item => {
     const total = SIZE_PTS[item.size] + SIS_PTS[item.sis] + item.adj.length;
-    return `<div class="review-card" id="rev-${item.id}"><h3>Review Deal Assignment: ${item.name}</h3>
+    return `<div class="review-card" id="rev-${item.id}"><h3>Review Assignment: ${item.name}</h3>
       <p style="font-size:12px;"><strong>Base:</strong> ${item.size} (${SIZE_PTS[item.size]}pts) + ${item.sis} (${SIS_PTS[item.sis]}pts)</p>
       <div style="margin-bottom:15px;"><label style="font-size:11px; font-weight:700;">Add Deal Adjustments:</label><br>
         <div style="display:grid; grid-template-columns: repeat(3, 1fr); gap: 5px; margin-top:5px;">
@@ -381,6 +390,7 @@ function toggleAdjMenu(id, element) {
   menu.classList.toggle('active');
 }
 
+function updateAdj(id, opt) { const d = myDeals.find(x => x.id === id); const idx = d.adj.indexOf(opt); idx > -1 ? d.adj.splice(idx, 1) : d.adj.push(opt); renderMyBook(); updateMetrics(); }
 function upRevPts(id, opt) { const item = reviewQueue.find(i => i.id === id); const idx = item.adj.indexOf(opt); idx > -1 ? item.adj.splice(idx, 1) : item.adj.push(opt); document.getElementById(`rev-tot-${id}`).innerText = SIZE_PTS[item.size] + SIS_PTS[item.sis] + item.adj.length; }
 function finRev(id, app) { if(app) { reviewQueue = reviewQueue.filter(i => i.id !== id); alert('Assigned.'); switchView('total-team'); } else { document.getElementById(`rev-${id}`).style.opacity = '0.5'; } }
 function switchSubTab(s) { document.getElementById('view-roster').style.display = s==='roster'?'block':'none'; document.getElementById('view-strat').style.display = s==='strat'?'block':'none'; document.getElementById('sub-team-roster').classList.toggle('active', s==='roster'); document.getElementById('sub-team-strat').classList.toggle('active', s==='strat'); }
