--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
     .view { display: none; }
     .view.active { display: block; }
 
-    /* Book Styles */
     table { width: 100%; border-collapse: collapse; background: white; border-radius: 8px; overflow: visible; }
     th { background: var(--ps-green); color: white; padding: 14px; text-align: left; font-size: 12px; text-transform: uppercase; }
     td { padding: 12px; border-bottom: 1px solid #eee; font-size: 12px; vertical-align: middle; }
@@ -64,7 +63,6 @@
     .adj-dropdown.active { display: block; }
     .adj-dropdown.open-up { bottom: 100%; top: auto; margin-bottom: 5px; }
 
-    /* Controls */
     .controls { display: flex; justify-content: space-between; align-items: center; margin-bottom: 20px; gap: 15px; }
     .btn-action { background: white; border: 1px solid #ddd; padding: 8px 16px; cursor: pointer; font-size: 12px; font-weight: 600; border-radius: 4px; transition: 0.2s; }
     .btn-action.active { background: var(--ps-green) !important; color: white !important; border-color: var(--ps-green) !important; }
@@ -78,6 +76,7 @@
     .im-list-table { width: 100%; background: white; border-radius: 8px; border-collapse: collapse; }
     .im-list-table th { background: var(--ps-dark-gray); color: white; padding: 10px; font-size: 11px; }
     .im-list-table td { padding: 10px; border-bottom: 1px solid #eee; }
+    .im-list-table tr.overload { background-color: var(--ps-overload-bg); }
     .status-dot { height: 10px; width: 10px; border-radius: 50%; display: inline-block; margin-right: 5px; }
 
     .capacity-container { margin: 25px 0 15px 0; position: relative; }
@@ -133,7 +132,7 @@
   <div id="view-territory" class="view">
     <div class="controls"><h2 style="color:var(--ps-dark-green); margin:0;">Territory Load Overview (EST)</h2>
       <div class="control-group">
-        <button id="btn-sort-territory" class="btn-action" onclick="toggleTierSort()">Sort Tier ↑↓</button>
+        <button id="btn-sort-tier-territory" class="btn-action" onclick="toggleTierSort()">Sort Tier ↑↓</button>
         <button id="btn-grid-territory" class="btn-action" onclick="setLayout('grid')">Card View</button>
         <button id="btn-list-territory" class="btn-action active" onclick="setLayout('list')">List View</button>
       </div>
@@ -159,7 +158,7 @@
           <button id="filter-cst" class="btn-action" onclick="setTZFilter('CST')">CST</button>
           <button id="filter-pst" class="btn-action" onclick="setTZFilter('PST')">PST</button>
           <span style="border-left:1px solid #ccc; margin:0 5px;"></span>
-          <button id="btn-sort-team" class="btn-action" onclick="toggleTierSort()">Sort Tier ↑↓</button>
+          <button id="btn-sort-tier-team" class="btn-action" onclick="toggleTierSort()">Sort Tier ↑↓</button>
           <button id="btn-grid-team" class="btn-action" onclick="setLayout('grid')">Card View</button>
           <button id="btn-list-team" class="btn-action active" onclick="setLayout('list')">List View</button>
         </div>
@@ -187,8 +186,9 @@ const ADJ_OPTIONS = ["Extended Launch", "Proof of Concept", "Pilots", "DSAs/DUAs
 let currentTab = 'my-book';
 let currentLayout = 'list';
 let currentTZFilter = 'all';
-let tierSortDir = 'desc'; // Track sort state
+let tierSortDir = 'desc';
 
+// My Book: 12 Examples (LOCKED)
 let myDeals = Array.from({length: 12}, (_, i) => {
     const savedAdj = localStorage.getItem(`adj_my_deal_${i}`);
     return {
@@ -210,6 +210,7 @@ let imData = [
   { name: "Taylor B.", tier: "T3", currentPoints: 115, dealsCount: 14, yellowRisk: 2, redRisk: 2, tz: "EST", isTerritory: true },
   { name: "Quinn J.", tier: "T1", currentPoints: 30, dealsCount: 9, yellowRisk: 0, redRisk: 0, tz: "EST", isTerritory: true }
 ];
+
 const extraTzs = ["CST", "PST"];
 for(let i=1; i<=15; i++) { imData.push({ name: `IM User ${i}`, tier: `T${Math.floor(Math.random()*4)+1}`, currentPoints: Math.floor(Math.random()*85), dealsCount: 10, yellowRisk: 1, redRisk: 0, tz: extraTzs[i % 2], isTerritory: false }); }
 
@@ -229,70 +230,41 @@ function switchView(tabId) {
 
 function updateMetrics() {
   let deals = 0, points = 0, yellow = 0, red = 0, maxPts = 0;
-  let roster = currentTab === 'territory' ? imData.filter(im => im.tz === "EST") : imData;
+  
+  // Define scope based on tab and filter
+  let roster = [];
   if (currentTab === 'my-book') {
     myDeals.forEach(d => { points += (SIZE_PTS[d.size] + SIS_PTS[d.sis] + HEALTH_PTS[d.health] + d.adj.length); if (d.health === 'yellow') yellow++; if (d.health === 'red') red++; });
     deals = 12; maxPts = 120; document.getElementById('tier-context').innerText = "(T3)";
   } else {
+    // Determine which roster to use for Territory vs Team tab
+    let baseRoster = currentTab === 'territory' ? imData.filter(im => im.tz === "EST") : imData;
+    
+    // Apply dynamic time zone filter for Team tab
+    roster = (currentTab === 'total-team' && currentTZFilter !== 'all') 
+             ? baseRoster.filter(im => im.tz === currentTZFilter) 
+             : baseRoster;
+
     roster.forEach(im => { deals += im.dealsCount; points += im.currentPoints; yellow += im.yellowRisk; red += im.redRisk; maxPts += MPC_VALUES[im.tier]; });
-    document.getElementById('tier-context').innerText = "(EST Avg)";
+    
+    // UI Label context
+    let label = "(Team Avg)";
+    if(currentTab === 'territory') label = "(EST Avg)";
+    else if(currentTZFilter !== 'all') label = `(${currentTZFilter} Avg)`;
+    document.getElementById('tier-context').innerText = label;
   }
-  const capPct = Math.round((points / maxPts) * 100);
+  
+  const capPct = points > 0 ? Math.round((points / maxPts) * 100) : 0;
   const color = capPct >= 90 ? 'var(--ps-red)' : (capPct >= 75 ? 'var(--ps-gold)' : 'var(--ps-green)');
-  document.getElementById('stat-deals').innerText = deals; document.getElementById('stat-points').innerText = points;
-  document.getElementById('max-pts').innerText = maxPts; document.getElementById('stat-risk').innerText = yellow + red;
+  
+  document.getElementById('stat-deals').innerText = deals; 
+  document.getElementById('stat-points').innerText = points;
+  document.getElementById('max-pts').innerText = maxPts; 
+  document.getElementById('stat-risk').innerText = yellow + red;
   document.getElementById('risk-breakdown-text').innerText = `${yellow} Yellow / ${red} Red`;
-  document.getElementById('stat-cap').innerText = capPct + '%'; document.getElementById('summary-cap-fill').style.width = capPct + '%';
+  document.getElementById('stat-cap').innerText = capPct + '%'; 
+  document.getElementById('summary-cap-fill').style.width = Math.min(capPct, 100) + '%';
   document.getElementById('summary-cap-fill').style.background = color;
-}
-
-function toggleTierSort() {
-  tierSortDir = (tierSortDir === 'desc' ? 'asc' : 'desc');
-  renderTeamContent();
-}
-
-function setLayout(m) { 
-  currentLayout = m; 
-  renderTeamContent();
-}
-
-function setTZFilter(tz) {
-  currentTZFilter = tz;
-  document.querySelectorAll('[id^="filter-"]').forEach(b => b.classList.remove('active'));
-  document.getElementById('filter-' + tz.toLowerCase()).classList.add('active');
-  renderTeamContent();
-}
-
-function calculateTotalPoints(deal) { return (SIZE_PTS[deal.size] || 0) + (SIS_PTS[deal.sis] || 0) + (HEALTH_PTS[deal.health] || 0) + deal.adj.length; }
-
-function renderMyBook() {
-  const body = document.getElementById('my-deals-body'); body.innerHTML = '';
-  myDeals.sort((a, b) => STAGES.indexOf(a.stage) - STAGES.indexOf(b.stage));
-  let currentStage = "";
-  myDeals.forEach(deal => {
-    if (deal.stage !== currentStage) {
-      if (currentStage !== "") body.innerHTML += `<tr class="stage-spacer"><td colspan="7"></td></tr>`;
-      body.innerHTML += `<tr><td colspan="7" class="stage-group-header">${deal.stage}</td></tr>`;
-      currentStage = deal.stage;
-    }
-    const pts = calculateTotalPoints(deal);
-    const isVertical = deal.adj.length > 2 ? 'vertical' : '';
-    body.innerHTML += `<tr><td>${deal.stage}</td><td><strong>${deal.name}</strong></td><td>${deal.size} (${SIZE_PTS[deal.size]})</td><td>${deal.sis} (${SIS_PTS[deal.sis]})</td><td><span class="pill ${deal.health}">${deal.health} (${HEALTH_PTS[deal.health]})</span></td>
-      <td><div class="adj-wrapper">
-        <div class="adj-display ${isVertical}">${deal.adj.map(a => `<span>${a} (+1)</span>`).join('')}</div>
-        <div class="adj-btn" onclick="toggleAdjMenu(${deal.id}, this)">Manage ▼</div>
-        <div class="adj-dropdown" id="adj-menu-${deal.id}">${ADJ_OPTIONS.map(opt => `<label style="display:block; margin-bottom:5px;"><input type="checkbox" ${deal.adj.includes(opt) ? 'checked' : ''} onchange="updateAdj(${deal.id}, '${opt}')"> ${opt} (+1)</label>`).join('')}</div>
-      </div></td>
-      <td><strong>${pts}</strong></td></tr>`;
-  });
-}
-
-function updateAdj(id, opt) { 
-  const d = myDeals.find(x => x.id === id); 
-  const idx = d.adj.indexOf(opt); 
-  idx > -1 ? d.adj.splice(idx, 1) : d.adj.push(opt);
-  localStorage.setItem(`adj_my_deal_${id}`, JSON.stringify(d.adj));
-  renderMyBook(); updateMetrics(); 
 }
 
 function renderTeamContent() {
@@ -307,12 +279,10 @@ function renderTeamContent() {
   const btnId = `btn-${currentLayout}-${currentTab.includes('team') ? 'team' : 'territory'}`;
   if(document.getElementById(btnId)) document.getElementById(btnId).classList.add('active');
 
-  // Logic: Tier Sort Ascending/Descending
   const sorted = roster.sort((a, b) => {
       const tierA = parseInt(a.tier.replace('T', ''));
       const tierB = parseInt(b.tier.replace('T', ''));
-      if (tierSortDir === 'desc') return tierB - tierA || a.name.localeCompare(b.name);
-      return tierA - tierB || a.name.localeCompare(b.name);
+      return tierSortDir === 'desc' ? tierB - tierA : tierA - tierB;
   });
 
   if (currentLayout === 'list') {
@@ -327,7 +297,7 @@ function renderTeamContent() {
       table.querySelector('tbody').innerHTML += `<tr class="${isOver?'overload':''}" style="${off && !isOver ? 'opacity:0.5':''}">
         <td>${im.tz}</td><td>${im.tier}</td><td><strong>${im.name}</strong></td><td>${im.currentPoints}/${mpc}</td><td><span class="status-dot" style="background:${color}"></span>${cap}%</td><td>${im.dealsCount}</td><td>${im.yellowRisk}Y/${im.redRisk}R</td>
         ${currentTab==='total-team'?`<td><button class="btn-rotation ${off?'off':''}" onclick="tRot('${im.name}')">${off?'Off Rotation':'On Rotation'}</button></td>`:''}
-        <td><input type="text" class="list-note" value="${localStorage.getItem('n_'+im.name)||''}"></td><td><button class="btn-save" onclick="sNote('${im.name}',this)">Save</button></td></tr>`;
+        <td><input type="text" class="list-note" value="${localStorage.getItem('note_'+im.name)||''}"></td><td><button class="btn-save" onclick="sNote('${im.name}',this)">Save</button></td></tr>`;
     });
   } else {
     let currentTier = ""; let grid;
@@ -351,6 +321,40 @@ function renderTeamContent() {
         <textarea placeholder="Notes...">${localStorage.getItem('n_'+im.name)||''}</textarea><button class="btn-save" onclick="sNote('${im.name}',this)" style="float:right;margin-top:5px;">Save</button></div>`;
     });
   }
+}
+
+function setTZFilter(tz) {
+  currentTZFilter = tz;
+  document.querySelectorAll('[id^="filter-"]').forEach(b => b.classList.remove('active'));
+  document.getElementById('filter-' + tz.toLowerCase()).classList.add('active');
+  renderTeamContent();
+  updateMetrics();
+}
+
+function toggleTierSort() { tierSortDir = (tierSortDir === 'desc' ? 'asc' : 'desc'); renderTeamContent(); }
+function setLayout(m) { currentLayout = m; renderTeamContent(); }
+function calculateTotalPoints(deal) { return (SIZE_PTS[deal.size] || 0) + (SIS_PTS[deal.sis] || 0) + (HEALTH_PTS[deal.health] || 0) + deal.adj.length; }
+
+function renderMyBook() {
+  const body = document.getElementById('my-deals-body'); body.innerHTML = '';
+  myDeals.sort((a, b) => STAGES.indexOf(a.stage) - STAGES.indexOf(b.stage));
+  let currentStage = "";
+  myDeals.forEach(deal => {
+    if (deal.stage !== currentStage) {
+      if (currentStage !== "") body.innerHTML += `<tr class="stage-spacer"><td colspan="7"></td></tr>`;
+      body.innerHTML += `<tr><td colspan="7" class="stage-group-header">${deal.stage}</td></tr>`;
+      currentStage = deal.stage;
+    }
+    const pts = calculateTotalPoints(deal);
+    const isVertical = deal.adj.length > 2 ? 'vertical' : '';
+    body.innerHTML += `<tr><td>${deal.stage}</td><td><strong>${deal.name}</strong></td><td>${deal.size} (${SIZE_PTS[deal.size]})</td><td>${deal.sis} (${SIS_PTS[deal.sis]})</td><td><span class="pill ${deal.health}">${deal.health} (${HEALTH_PTS[deal.health]})</span></td>
+      <td><div class="adj-wrapper">
+        <div class="adj-display ${isVertical}">${deal.adj.map(a => `<span>${a} (+1)</span>`).join('')}</div>
+        <div class="adj-btn" onclick="toggleAdjMenu(${deal.id}, this)">Manage ▼</div>
+        <div class="adj-dropdown" id="adj-menu-${deal.id}">${ADJ_OPTIONS.map(opt => `<label style="display:block; margin-bottom:5px;"><input type="checkbox" ${deal.adj.includes(opt) ? 'checked' : ''} onchange="updateAdj(${deal.id}, '${opt}')"> ${opt} (+1)</label>`).join('')}</div>
+      </div></td>
+      <td><strong>${pts}</strong></td></tr>`;
+  });
 }
 
 function renderReviewQueue() {
@@ -390,7 +394,14 @@ function toggleAdjMenu(id, element) {
   menu.classList.toggle('active');
 }
 
-function updateAdj(id, opt) { const d = myDeals.find(x => x.id === id); const idx = d.adj.indexOf(opt); idx > -1 ? d.adj.splice(idx, 1) : d.adj.push(opt); renderMyBook(); updateMetrics(); }
+function updateAdj(id, opt) { 
+  const d = myDeals.find(x => x.id === id); 
+  const idx = d.adj.indexOf(opt); 
+  idx > -1 ? d.adj.splice(idx, 1) : d.adj.push(opt);
+  localStorage.setItem(`adj_my_deal_${id}`, JSON.stringify(d.adj));
+  renderMyBook(); updateMetrics(); 
+}
+
 function upRevPts(id, opt) { const item = reviewQueue.find(i => i.id === id); const idx = item.adj.indexOf(opt); idx > -1 ? item.adj.splice(idx, 1) : item.adj.push(opt); document.getElementById(`rev-tot-${id}`).innerText = SIZE_PTS[item.size] + SIS_PTS[item.sis] + item.adj.length; }
 function finRev(id, app) { if(app) { reviewQueue = reviewQueue.filter(i => i.id !== id); alert('Assigned.'); switchView('total-team'); } else { document.getElementById(`rev-${id}`).style.opacity = '0.5'; } }
 function switchSubTab(s) { document.getElementById('view-roster').style.display = s==='roster'?'block':'none'; document.getElementById('view-strat').style.display = s==='strat'?'block':'none'; document.getElementById('sub-team-roster').classList.toggle('active', s==='roster'); document.getElementById('sub-team-strat').classList.toggle('active', s==='strat'); }
